<?xml version="1.0"?>
<package format="2">
  <name>synexens_ros1</name>
  <version>4.2.1</version>
  <description>The Synexens_sdk4 Sensor Driver for ROS.</description>
  <maintainer email="synexens@synexens.com">synexens</maintainer>
  <author email="shiyu.yang@synexens.com">shiyu.yang</author>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>
  <depend>image_geometry</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>camera_info_manager</depend>
  <depend>angles</depend>
  <depend>nodelet</depend>
  <depend>xacro</depend>
  <depend>cv_bridge</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
